@@ -1,3 +1,5 @@
+HEAD
+	+ Allow dansguardian user to read categories lists files
 3.2.7
 	+ Forced 644 permission on Dansguardian files to avoid zombie processes
 3.2.6
